Navbar implementation Horizontal overflow fix Added icon

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,10 @@
 #toc{
-  margin-top: 3em;
+  margin-top: 1em;
   background: #e0e2dc;
+}
+
+.row{
+  margin: 0;
 }
 
 .pre-scrollable {
@@ -13,6 +17,6 @@ h1{
 }
 
 #mainWindow{
-  margin-top: 3em;
   background: #c5c9d6;
+  height: 100%;
 }
