--- a/src/app/capture/capture.component.css
+++ b/src/app/capture/capture.component.css
@@ -22,5 +22,5 @@ h4{
 
 
 #level{
-  font-size: 3em;
+  font-size: 2.5em;
 }
