--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,3 +1,11 @@
 ul{
   display: none;
 }
+
+h5{
+  padding-left: 1em;
+}
+
+a{
+  color: #303037;
+}
