--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 body{
   background: #e0e2dc;
 }
+
+#main{
+  margin:auto;
+}
